website/versioned_docs/version-0.4.1/cli-reference/gitops_add_cluster.md
## gitops add cluster

Add a new cluster using a CAPI template

```
gitops add cluster [flags]
```

### Examples

```

# Add a new cluster using a CAPI template
gitops add cluster --from-template <template-name> --set key=val

# View a CAPI template populated with parameter values 
# without creating a pull request for it
gitops add cluster --from-template <template-name> --set key=val --dry-run
		
```

### Options

```
      --base string              The base branch of the remote repository
      --branch string            The branch to create the pull request from
      --commit-message string    The commit message to use when adding the CAPI template
      --description string       The description of the pull request
      --dry-run                  View the populated template without creating a pull request
      --from-template string     Specify the CAPI template to create a cluster from
  -h, --help                     help for cluster
      --set strings              Set parameter values on the command line (can specify multiple or separate values with commas: key1=val1,key2=val2)
      --set-credentials string   The CAPI credentials to use
      --title string             The title of the pull request
      --url string               URL of remote repository to create the pull request
```

### Options inherited from parent commands

```
  -e, --endpoint string    The Weave GitOps Enterprise HTTP API endpoint
      --namespace string   Weave GitOps runtime namespace (default "wego-system")
  -v, --verbose            Enable verbose output
```

### SEE ALSO

* [gitops add](gitops_add.md)	 - Add a new Weave GitOps resource

###### Auto generated by spf13/cobra on 3-Nov-2021
